style.css
/* ... */
.page2 p {

    font-size: 5rem;
    font-weight: 900;
    padding-left: 2rem;
    color: transparent;
    -webkit-text-stroke-color: #ff9dcb;
    -webkit-text-stroke-width: 0.1rem;
}

/* @media screen and (max-width:1350px) {
    .code{
        font-family: 'Fira Code';
        background-color: #00021B;
        position: absolute;
        top: 55%;
        font-size: 0.4rem;
        font-weight: 700;
        left: 5%;
        padding: 3rem;
        white-space: pre-wrap;
        word-wrap: break-word;
        text-align: justify;
        right: 5%;
        border-radius: 2rem;
        color: #E51376;
    }
}  */

@media screen and (min-width:1420px) {
    .page2 .intro {
        color: #ff9dcb;
        font-size: 2.5rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (max-width:1419px) and (min-width:836px) {
    .page2 .intro {
        color: #ff9dcb;
        font-size: 2rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (min-width:565px) and (max-width:835px) {
    .page2 .intro {
        color: #ff9dcb;
        font-size: 1.5rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (max-width:565px) {
    .page2 .intro {
        color: #ff9dcb;
        font-size: 1.2rem;
        padding: 3rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }

    .page2 p {

        font-size: 3rem;
        font-weight: 600;
        padding-left: 2rem;
        color: transparent;
        -webkit-text-stroke-color: #ff9dcb;
        -webkit-text-stroke-width: 0.1rem;
    }
}

.code {
    font-family: 'Fira Code';
    background-color: #182146;
    position: absolute;
    top: 55%;
    font-size: 0.7rem;
    font-weight: 700;
    left: 3%;
    padding-bottom: 8rem;
    padding-top: 2rem;
    white-space: pre-wrap;
    word-wrap: break-word;
    text-align: justify;
    right: 3%;
    border-radius: 2rem;
    color: #3C4C79;
}

.intro span {
    color: #E51376;
}

.page3 {
    position: absolute;
    top: 200%;
    height: 100%;
    background: #00021B;
    width: 100%;
}

@media screen and (min-width:751px) {
    .page3 p {
        position: absolute;
        top: -15%;
        right: 3%;
        padding-top: 3rem;
        color: transparent;
        font-size: 8rem;
        font-weight: 900;
        -webkit-text-stroke-color: #ff9dcb;
        -webkit-text-stroke-width: 0.1rem;
        animation: slide-up 3s;
    }

    /* .project-grid {

    padding-top: 20em;
    display: flex;
    justify-content: space-around;

}

.project {
    vertical-align: middle;
    height: 20rem;
    width: 15rem;
    border-radius: 2rem;
    border: dashed 0.5vh #E51376;
    transition: 1s ease-out;
    color: #E51376;
    font-size: 2rem;
    text-align: center;
    font-weight: 700;
}

.project:hover {
    background: #E51376;
    color: #5d2b7c;
    height: 22rem;
    width: 17rem;

}

.project h5 {
    color: #00021B;
    padding: 1rem;
} */
}

@media screen and (max-width: 750px) {
    .page3 p {
        position: absolute;
        top: -5%;
        right: 3%;
        color: transparent;
        font-size: 3rem;
        font-weight: 900;
        -webkit-text-stroke-color: #ff9dcb;
        -webkit-text-stroke-width: 0.1rem;
        animation: slide-up 3s;
    }

    .page3 .project-grid {
        padding-top: 8rem;
        display: block;
    }

    .page3 .project-grid .project {
        height: auto;
        width: 90%;
        /* margin: 0 auto 2rem; */
        border-radius: 2rem;
        /* border: dashed 0.5vh #E51376; */
        transition: 1s ease-out;
        color: #E51376;
        font-size: 1.5rem;
        text-align: center;
        font-weight: 700;
    }

    .page3 .project-grid .project a {
        display: block;
        height: 100%;
        width: 100%;
    }

    .page3 .project-grid .project:hover {
        background: #E51376;
        color: #5d2b7c;

    }

    .page3 .project-grid .project h5 {
        color: #00021B;
        padding: 1rem;
    }
}


.page4 {
    position: absolute;
    top: 300%;
    height: 100%;
    background: #00021B;
    width: 100%;
}

.page4 p {
    font-size: 4rem;
    font-weight: 700;
    padding-left: 2rem;
    color: transparent;
    -webkit-text-stroke-color: #ff9dcb;
    -webkit-text-stroke-width: 0.1rem;
}

.input {
    background-color: #00021B;
    color: #ff9dcb;
    padding: 0.5rem;
    border: 0.15rem dashed #E51376;
    border-radius: 0.3rem;
    width: 100%;
    font-weight: 700;
    font-size: 1rem;
    outline: none;
}

.feedback-box {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 3rem;
    overflow: wrap;
}

.inputbox {
    color: #00021B;
    display: relative;
    width: 40rem;
    font-weight: 700;

}

.inputbox span {
    color: #ff9dcb;
    position: absolute;
    padding: 0.5rem;
    pointer-events: none;
    transition: 0.5s;
}

.links-bg {
    position: absolute;
    width: 100%;
    height: 20%;
    top: 80%;
    background-color: #3C4C79;


}

.links {
    display: flex;
    justify-content: center;

}

.links img {
    padding-top: 3rem;
    padding-inline: 1rem;
    border-radius: 1rem;
}

.links img:hover {
    -webkit-filter: drop-shadow(0.15rem 0.15rem  #ff9dcb80);
    filter: drop-shadow(0.15rem 0.15rem  #ff9dcb88);
}

button {
    font-weight: 600;
    background-color: #ff9dcb;
    border: transparent;
    color: #E51376;
    border-radius: 0.5rem;
    padding: 0.5rem 3rem;

}

button:hover {
    cursor: pointer;
    color: #ff9dcb;
    background-color: #E51376;
}

.row {
    padding-top: 15rem;
    width: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}
/* ... */

